feat: implement sensor parsing and handling

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
 
+export BEERPONG_LOG_LEVEL="info"
 export BEERPONG_USB_PORT="/dev/ttyACM0"
 export BEERPONG_BAUD_RATE="115200"
 export BEERPONG_PUBLIC_HTML="../rpi-front/dist"
