feat: finish SQLite database implementation

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ export BEERPONG_USB_PORT="/dev/ttyACM0"
 export BEERPONG_BAUD_RATE="115200"
 export BEERPONG_PUBLIC_HTML="../rpi-front/dist"
 export BEERPONG_MOCK="false"
+export BEERPONG_DB_PATH="./test_db.sqlite"
