chore: update default values in .env file

--- a/.env.sample
+++ b/.env.sample
@@ -7,4 +7,4 @@ export BEERPONG_PUBLIC_HTML="../rpi-front/dist"
 export BEERPONG_MOCK="false"
 export BEERPONG_PRODUCTION="true"
 export BEERPONG_LISTEN_PORT="8080"
-export BEERPONG_DB_PATH="./test_db.sqlite"
+export BEERPONG_DB_PATH="./game_db.sqlite"
