Use pure Golang database

--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,6 @@ export BEERPONG_BAUD_RATE="115200"
 export BEERPONG_PUBLIC_HTML="../rpi-front/dist"
 export BEERPONG_MOCK="false"
 export BEERPONG_PRODUCTION="true"
+export BEERPONG_LISTEN_ADDR="0.0.0.0"
 export BEERPONG_LISTEN_PORT="8080"
-export BEERPONG_DB_PATH="./game_db.sqlite"
+export BEERPONG_DB_PATH="game_db.db"
